--- a/jojoIM/Podfile
+++ b/jojoIM/Podfile
@@ -5,6 +5,8 @@ pod 'Masonry', '~> 0.6.4'
 pod 'SVProgressHUD', '~> 2.0.3'
 pod 'Reachability', '~> 3.1.1'
 pod 'CocoaLumberjack', '~> 2.0.0-rc2'
+pod 'AMapLocation','~> 2.1.1'
+pod 'AMap2DMap','~> 4.2.0'
 
 #加载更新命令
 #pod install --verbose --no-repo-update
