--- a/jojoIM/jojoIM/Info.plist
+++ b/jojoIM/jojoIM/Info.plist
@@ -20,10 +20,19 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>相机拍照</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>使用您当前的定位 获取周边圈子</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>相册提供笔记添加照片</string>
 	<key>UILaunchStoryboardName</key>
